# vol-surface-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVLOG.md
evals/: golden_dataset.json  last_run_results.json  run_eval.py
scripts/: demo_agent.py  demo_graph_agent.py  demo_iv.py
src/vol_surface_agent/agent/: __init__.py  errors.py  graph.py  graph_tools.py  simple_agent.py
src/vol_surface_agent/ingestion/: __init__.py  build_index.py  edgar.py
src/vol_surface_agent/tools/: formatting.py  langchain_tools.py  options.py  realized_vol.py
tests/: test_edgar.py  test_graph_agent.py  test_options.py  test_realized_vol.py
