[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-surface-agent"
version = "0.1.0"
description = "Agent for options volatility surface analysis: implied vol, greeks, and skew/richness questions grounded in live chain data and earnings/10-K text."
requires-python = ">=3.11"
dependencies = [
    "yfinance",
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
